--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "lodash": "^4.17.15",
-
+    "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-dates": "^20.3.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
