--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.6.9",
+    "mongoose": "^5.7.1",
+    "mongoose-moment": "^0.1.3",
     "validator": "^11.1.0"
   }
 }
